Blog changes, update resume

--- a/posts/rust_lambda_calc_1.mdx
+++ b/posts/rust_lambda_calc_1.mdx
@@ -11,11 +11,11 @@ description: "Notes of functional programming and Rust's ownership system"
 
 ## Introduction
 
-The early 20th century saw the discovery of paradoxes and inconsistencies in set theory, a foundational branch of mathematics on whose results much of the rest of the subject depends. These paradoxes led mathematicians to probe the nature of logic itself and attempt to understand the limits of formal systems. The study of how logic, knowledge, and deduction could be formalized led to the invention of abstract systems of computation, and in turn, the field of computer science itself. Among the systems of computation developed to understand the nature of logic was the lambda calculus. Invented by Alonzo Church in the 1930s, the lambda calculus remains central to the theory of programming langauges, and forms the basis for modern functional languages like Haskell and OCaml.
+The discovery of paradoxes and inconsistencies in set theory during the early 20th century motivated mathematicians to more carefully study the nature of formalized mathematics; they began to ask what 'formalization' even meant, how mathematics could be formalized, and what the limits of formal systems were. The study of these questions led to the invention of abstract systems of computation, and in turn, the field of computer science itself. The _lambda calculus_ was one such system of computation invented by Alonzo Church in the 1930s. It remains central to the theory of programming langauges and forms the basis for modern functional languages like Haskell and OCaml.
 
-I was first exposed to the lambda calculus during a programming languages course I took at college during fall 2024; this was probably my favorite course I ever took during my time at university. Besides theoretical topics like the lambda calculus, the course also discussed some interesting modern progamming languages such as Rust, which features a unique type system designed to guarantee memory safety without the overhead of runtime garbage collection. I thought a fun way to revisit some of the concepts we covered in this course would be to build an interpreter for the lambda calculus in Rust; this blog post discusses some of the things I learned along the way :)
+I was first exposed to the lambda calculus during a programming languages course I took at college during fall 2024; this was probably my favorite course I ever took during my time at university. Besides theoretical topics like the lambda calculus, the course also discussed some modern progamming languages such as Rust, which features an ownership type system designed to guarantee memory safety without the overhead of runtime garbage collection. I thought a fun way to revisit some of the concepts we covered in this course would be to build an interpreter for the lambda calculus in Rust; this blog post discusses some of the things I learned along the way :)
 
-You can find the source code for the interpreter [here](https://github.com/Ashboy64/rust-lambda-calc).
+You can find the source code for the interpreter [here](https://github.com/aprao2002/rust-lambda-calc).
 
 The next couple of sections of this post provide some background information on the lambda calculus and Rust. However, if you're unfamiliar with these topics and would like to learn more, I'd highly recommend [Stanford's CS 242 slides](https://web.stanford.edu/class/cs242/), the [Rust book](https://doc.rust-lang.org/book/), and a textbook I found called [The Implementation of Functional Programming Languages](https://simon.peytonjones.org/assets/pdfs/slpj-book-1987-searchable.pdf).
 
@@ -105,12 +105,10 @@ $$
 As you can see, the evaluation of $(\lambda a. a) (\lambda b. b)$ is shared between both instances of $f$, so in the final output, $f$ is evaluated to the value $\lambda b. b$ in the argument to $x$. 
 
 Sharing does slightly break the semantics of WHNF because it now might look like some extra expressions were evaluated as compared to true WHNF execution. This is not an issue for two reasons:
-- The Church-Rosser theorem states that the lambda calclus is confluent, i.e., given that $e_1 \rightarrow^* e_2$ and $e_1 \rightarrow* e_3$, there must exist some $e_4$ such that $e_2 \rightarrow* e_4$ and $e_3 \rightarrow* e_4$. Thus, even though the exact output strings produced with sharing may look different from those produced by exact WHNF evaluation, they will still be in some sense 'equivalent'.
+- The Church-Rosser theorem states that the lambda calclus is confluent, i.e., given that $e_1 \rightarrow^* e_2$ and $e_1 \rightarrow^* e_3$, there must exist some $e_4$ such that $e_2 \rightarrow^* e_4$ and $e_3 \rightarrow^* e_4$. Thus, even though the exact output strings produced with sharing may look different from those produced by exact WHNF evaluation, they will still be in some sense 'equivalent'.
 - Sharing provides significant efficiency benefits when evaluating lambda calclus programs, and these gains are large enough to warrant violating the 'pure' definition of WHNF.
 
-Now that we know what call-by-name, call-by-value, and sharing are, why would a language choose to implement one or the other?
-- The main potential benefir of call-by-name is that we might not have to evaluate expressions that we do not end up using. However, call-by-name also requires sharing to be practical because otherwise we might be doing a lot of deep copies when substituting a formal parameter for an expression.
-- The main drawback of call-by-name is that it can lead to execution order / program behavior that is unintuitive to the programmer. 
+Now that we know what call-by-name, call-by-value, and sharing are, why would a language choose to implement one or the other? The main potential benefit of call-by-name is that we might not have to evaluate expressions that we do not end up using. However, call-by-name also requires sharing to be practical because otherwise we might be doing a lot of deep copies when substituting a formal parameter for an expression. Another drawback of call-by-name is that it can lead to execution order / program behavior that is unintuitive to the programmer. For these reasons, most languages implement call-by-value evaluation order, but for this project I chose to stick with the 'theoretically cleaner' semantics of call-by-name evaluation.
 
 
 ## Rust
@@ -310,7 +308,7 @@ By having `perform_beta_reduction_helper` and `perform_alpha_conversion` take mu
 
 ### Some Borrow Checker Difficulties
 
-One challenge in the implementation was `eval_expr_lazy`. Specifically, in this function, we pattern match on a mutable reference called `expr_body` (the expression we are evaluating), and if it is a function application, we pattern match on a mutable reference to the function. If the function is a function definition, we need to perform beta reduction because we are at a redex. Lastly, we need to reset the `expr_body` pointer to be the pointer to the function definition. But since the function definition is behind a mutable reference, and since we have not taken ownership of the value when pattern matching, we cannot just dereference it and assign it to `expr_body` via for example `*expr_body = **defined_fn`. We could just take ownership of `defined_fn` when we pattern match instead of keeping it behind a mutable reference, but then in all cases, we will have to 're-construct' the `expr_body` value to move ownership of the data back into `expr_body` from the variables we bound during pattern matching; this is stylistically pretty awkward to do. The solution ended up being to use Rust's `std::mem::replace` function, which allows you to replace the data behind a mutable reference with some other data while taking ownership of the original data. This way, we can keep all pattern matching behind mutable references, but when we have to update `expr_body`, we can do so via `expr_body = std::mem::replace(defined_fn, dummy_value())`. See the code [here](https://github.com/Ashboy64/rust-lambda-calc/blob/master/src/box_tree_impl/box_tree_execution.rs) to learn more.
+One challenge in the implementation was `eval_expr_lazy`. Specifically, in this function, we pattern match on a mutable reference called `expr_body` (the expression we are evaluating), and if it is a function application, we pattern match on a mutable reference to the function. If the function is a function definition, we need to perform beta reduction because we are at a redex. Lastly, we need to reset the `expr_body` pointer to be the pointer to the function definition. But since the function definition is behind a mutable reference, and since we have not taken ownership of the value when pattern matching, we cannot just dereference it and assign it to `expr_body` via for example `*expr_body = **defined_fn`. We could just take ownership of `defined_fn` when we pattern match instead of keeping it behind a mutable reference, but then in all cases, we will have to 're-construct' the `expr_body` value to move ownership of the data back into `expr_body` from the variables we bound during pattern matching; this is stylistically pretty awkward to do. The solution ended up being to use Rust's `std::mem::replace` function, which allows you to replace the data behind a mutable reference with some other data while taking ownership of the original data. This way, we can keep all pattern matching behind mutable references, but when we have to update `expr_body`, we can do so via `expr_body = std::mem::replace(defined_fn, dummy_value())`. See the code [here](https://github.com/aprao2002/rust-lambda-calc/blob/master/src/box_tree_impl/box_tree_execution.rs) to learn more.
 
 ### Theoretically Characterizing Execution Efficiency
 
