--- a/posts/rust_lambda_calc_1.mdx
+++ b/posts/rust_lambda_calc_1.mdx
@@ -11,7 +11,7 @@ description: "Notes of functional programming and Rust's ownership system"
 
 ## Introduction
 
-The discovery of paradoxes and inconsistencies in set theory during the early 20th century motivated mathematicians to more carefully study the nature of formalized mathematics; they began to ask what 'formalization' even meant, how mathematics could be formalized, and what the limits of formal systems were. The study of these questions led to the invention of abstract systems of computation, and in turn, the field of computer science itself. The _lambda calculus_ was one such system of computation invented by Alonzo Church in the 1930s. It remains central to the theory of programming langauges and forms the basis for modern functional languages like Haskell and OCaml.
+The discovery of paradoxes and inconsistencies in set theory during the early 20th century motivated mathematicians to more carefully study the nature of formalized mathematics; they began to ask what 'formalization' even meant, how mathematics could be formalized, and what the limits of formal systems were. The study of these questions led to the invention of abstract systems of computation, and in turn, the field of computer science itself. The _lambda calculus_ was one such system of computation invented by Alonzo Church in the 1930s. It remains central to the theory of programming languages and forms the basis for modern functional languages like Haskell and OCaml.
 
 I was first exposed to the lambda calculus during a programming languages course I took at college during fall 2024; this was probably my favorite course I ever took during my time at university. Besides theoretical topics like the lambda calculus, the course also discussed some modern progamming languages such as Rust, which features an ownership type system designed to guarantee memory safety without the overhead of runtime garbage collection. I thought a fun way to revisit some of the concepts we covered in this course would be to build an interpreter for the lambda calculus in Rust; this blog post discusses some of the things I learned along the way :)
 
@@ -57,7 +57,7 @@ $$
 \lambda y. y y
 $$
 
-This string represents a function that given some input y, return the output of applying y to itself. However, this is _not_ what the original program actually represents. The value $y$ to which we applied $(\lambda x. \lambda y. x y)$ was a _free variable_; it was not bound by any lambda abstraction. We can rename the formal parameter $y$ to get an equivalent program $(\lambda x. \lambda y'. x y') y$, which when reduced gives us $\lambda y' y y'$. This result has an entirely different meaning than $\lambda y. y y$, the string that we obtained when we naively applied beta reduction. 
+This string represents a function that given some input y, return the output of applying y to itself. However, this is _not_ what the original program actually represents. The value $y$ to which we applied $(\lambda x. \lambda y. x y)$ was a _free variable_; it was not bound by any lambda abstraction. We can rename the formal parameter $y$ to get an equivalent program $(\lambda x. \lambda y'. x y') y$, which when reduced gives us $\lambda y'. y y'$. The resulting function takes in a new argument $y'$, and applies the original free variable $y$ to it; this has a completely different meaning than $\lambda y. y y$, the string that we obtained when we naively applied beta reduction. 
 
 The problem is that in the naive case, the expression we are substituting $x$ for contains free variables that are bound by inner lambda abstractions of the expression we are substituting into. This issue is known as _variable capture_. To avoid variable capture, we will use another computation rule called _alpha conversion_, which just specifies that when we detect any instances where variable capture will occur, we will rename the formal parameter to prevent it. In other words, we will make sure to detect whenever we are performing a reduction like $(\lambda x. \lambda y. x y) y$, and when we do, we will rename the lambda abstraction to be $(\lambda x. \lambda y'. x y') y$ instead.
 
@@ -78,15 +78,16 @@ The left spine of the expression consists of the nodes on the far left hand-side
 
 A common optimization in functional languages is to implement _sharing_, which tries to reduce the number of times we need to evaluate the same expression. The key idea of sharing is that when we perform substitutions, instead of substituting each instance of a formal parameter with a new deepcopy of its associated expression, we instead replace all instances of the formal parameter with pointers to a single copy of its associated expression. Now, if we ever evaluate any single instance of the formal parameter, we can reuse the results of that evaluation anytime that it's needed instead of re-evaluating the expression from scratch.
 
-For example, consider the program $ (\lambda f. \lambda x. (f x) (f x)) ((\lambda a. a) (\lambda b. b)) x $. Under regular lazy evaluation, we would apply computation rules like so:
+For example, consider the program $(\lambda f. \lambda a. \lambda b. (f a) (f b)) ((\lambda c. c) (\lambda d. d)) x y$. Under regular lazy evaluation, we would apply computation rules like so:
 
 $$
 \begin{align*}
-(\lambda f. \lambda x. (f x) (f x)) & ((\lambda a. a) (\lambda b. b)) x \\
-&\rightarrow (\lambda x. (((\lambda a. a) (\lambda b. b)) x) (((\lambda a. a) (\lambda b. b)) x) ) x \\
-&\rightarrow (((\lambda a. a) (\lambda b. b)) x) (((\lambda a. a) (\lambda b. b)) x) \\
-&\rightarrow ((\lambda b. b) x) (((\lambda a. a) (\lambda b. b)) x) \\
-&\rightarrow x (((\lambda a. a) (\lambda b. b)) x)
+(\lambda f. \lambda a. \lambda b. (f a) (f b)) & ((\lambda c. c) (\lambda d. d)) x y \\
+&\rightarrow \lambda a. \lambda b. ( ((\lambda c. c) (\lambda d. d)) a ) ( ((\lambda c. c) (\lambda d. d)) b ) x y \\
+&\rightarrow \lambda b. ( ((\lambda c. c) (\lambda d. d)) x ) ( ((\lambda c. c) (\lambda d. d)) b ) y \\
+&\rightarrow ( ((\lambda c. c) (\lambda d. d)) x ) ( ((\lambda c. c) (\lambda d. d)) y ) \\
+&\rightarrow ( (\lambda d. d) x ) ( ((\lambda c. c) (\lambda d. d)) y ) \\
+&\rightarrow x ( ((\lambda c. c) (\lambda d. d)) y )
 \end{align*}
 $$
 
@@ -94,21 +95,47 @@ With sharing, the evaluation of the program would look like this:
 
 $$
 \begin{align*}
-(\lambda f. \lambda x. (f x) (f x)) & ((\lambda a. a) (\lambda b. b)) x \\
-&\rightarrow (\lambda x. (((\lambda a. a) (\lambda b. b)) x) (((\lambda a. a) (\lambda b. b)) x) ) x \\
-&\rightarrow (((\lambda a. a) (\lambda b. b)) x) (((\lambda a. a) (\lambda b. b)) x) \\
-&\rightarrow ((\lambda b. b) x) ((\lambda b. b) x) \\
-&\rightarrow x ((\lambda b. b) x)
+(\lambda f. \lambda a. \lambda b. (f a) (f b)) & ((\lambda c. c) (\lambda d. d)) x y \\
+&\rightarrow \lambda a. \lambda b. ( ((\lambda c. c) (\lambda d. d)) a ) ( ((\lambda c. c) (\lambda d. d)) b ) x y \\
+&\rightarrow \lambda b. ( ((\lambda c. c) (\lambda d. d)) x ) ( ((\lambda c. c) (\lambda d. d)) b ) y \\
+&\rightarrow ( ((\lambda c. c) (\lambda d. d)) x ) ( ((\lambda c. c) (\lambda d. d)) y ) \\
+&\rightarrow ( (\lambda d. d) x ) ( (\lambda d. d) y ) \\
+&\rightarrow x ( (\lambda d. d) y )
 \end{align*}
 $$
 
-As you can see, the evaluation of $(\lambda a. a) (\lambda b. b)$ is shared between both instances of $f$, so in the final output, $f$ is evaluated to the value $\lambda b. b$ in the argument to $x$. 
+As you can see, the evaluation of $(\lambda c. c) (\lambda d. d)$ is shared between both instances of $f$, so in the final output, $f$ is evaluated to the value $\lambda d. d$ in the term $( (\lambda d. d) y )$ that is given as an argument to $x$.
 
 Sharing does slightly break the semantics of WHNF because it now might look like some extra expressions were evaluated as compared to true WHNF execution. This is not an issue for two reasons:
 - The Church-Rosser theorem states that the lambda calclus is confluent, i.e., given that $e_1 \rightarrow^* e_2$ and $e_1 \rightarrow^* e_3$, there must exist some $e_4$ such that $e_2 \rightarrow^* e_4$ and $e_3 \rightarrow^* e_4$. Thus, even though the exact output strings produced with sharing may look different from those produced by exact WHNF evaluation, they will still be in some sense 'equivalent'.
 - Sharing provides significant efficiency benefits when evaluating lambda calclus programs, and these gains are large enough to warrant violating the 'pure' definition of WHNF.
 
-Now that we know what call-by-name, call-by-value, and sharing are, why would a language choose to implement one or the other? The main potential benefit of call-by-name is that we might not have to evaluate expressions that we do not end up using. However, call-by-name also requires sharing to be practical because otherwise we might be doing a lot of deep copies when substituting a formal parameter for an expression. Another drawback of call-by-name is that it can lead to execution order / program behavior that is unintuitive to the programmer. For these reasons, most languages implement call-by-value evaluation order, but for this project I chose to stick with the 'theoretically cleaner' semantics of call-by-name evaluation.
+Now that we know what call-by-name, call-by-value, and sharing are, why would a language choose to implement one or the other? 
+
+The main potential benefit of call-by-name is that we might not have to evaluate expressions that we do not end up using. In the extreme, this means that for some programs, call-by-name execution might successfully terminate, while call-by-value execution loops forever while trying to evaluate a sub-expression that isn't actually used to produce the final result but that does not terminate. In fact, it can be shown that if any reduction order for a program terminates, then call-by-name evaluation will also terminate.
+
+For example, consider the program $(\lambda x. \lambda y. x) a ((\lambda f. f f) (\lambda f. f f))$. Under call-by-name evaluation this will reduce to:
+
+$$
+\begin{align*}
+(\lambda x. \lambda y. x) a ((\lambda f.& f f) (\lambda f. f f)) \\
+&\rightarrow (\lambda y. a) ((\lambda f. f f) (\lambda f. f f)) \\
+&\rightarrow a
+\end{align*}
+$$
+
+However call-by-value evaluation will enter into an infinite loop trying to evaluate the sub-expression $(\lambda f. f f) (\lambda f. f f)$:
+
+$$
+\begin{align*}
+(\lambda x. \lambda y. x) a ((\lambda f.& f f) (\lambda f. f f)) \\
+&\rightarrow (\lambda y. a) ((\lambda f. f f) (\lambda f. f f)) \\
+&\rightarrow (\lambda y. a) ((\lambda f. f f) (\lambda f. f f)) \\
+&\rightarrow ...
+\end{align*}
+$$
+
+Despite call-by-name allowing us to skip evaluating unused expressions, and having advantages in terms of termination, it has some issues that make it less practical for real-world languages. For one, we need to keep pointers to the code needed to materialize unevaluated arguments (called 'thunks'), which adds overhead. Furthermore, call-by-name also requires sharing to be practical because otherwise we might be doing a lot of deep copies when substituting a formal parameter for an expression. Another drawback of call-by-name is that it can lead to execution order / program behavior that is unintuitive to the programmer. This is an especially big problem if the code includes side-effects that are outside the bare-bones conception of functional languages (such side-effects could include interacting with IO, the filesystem, raising exceptions, etc). For these reasons, most languages implement call-by-value evaluation order, but for this project I chose to stick with the 'theoretically cleaner' semantics of call-by-name evaluation.
 
 
 ## Rust
@@ -127,9 +154,31 @@ Note that both values and owners are *dynamic*; they are produced and change as 
 
 So far, this sounds pretty simple -- we deallocate values when they go out of scope. The catch is that values might be _aliased_; multiple variables might refer to the same data during execution. We need a way to pick one of them as the unique owner, and ensure that it is not possible to continue to use the other variables referring to that value when the owner goes out of scope.
 
-To resolve this, the programmer tells the Rust compiler which variable / function parameter / container is the unique owner of some value in the program they write. The other variables through which that value can be accessed are _references_. References _borrow_ values from their owners, and when a reference goes out-of-scope, the underlying value is *not* deallocated (deallocation only happens when the owner goes out-of-scope). References are basically pointers, but Rust's ownership / borrowing rules guarantee that they will always point to valid memory. 
+To resolve this, the programmer implicitly tells the Rust compiler which variable / function parameter / container is the unique owner of some value in the program they write. The other variables through which that value can be accessed are _references_. References _borrow_ values from their owners, and when a reference goes out-of-scope, the underlying value is *not* deallocated (deallocation only happens when the owner goes out-of-scope). References are basically pointers, but Rust's ownership / borrowing rules guarantee that they will always point to valid memory. Here's a small example:
 
-To do this, each reference is associated with a _lifetime_. A reference's lifetime is the region of code where it can be used. Rust's borrow checker infers lifetimes for all references in a program and makes sure that every reference's lifetime does not exceed the lifetime of the value's owner (programmers might have to specify some lifetime information manually though, particularly at function calls and when defining structs).
+```
+fn print_str(x: &String) {
+    println!("x is {x}.");
+}
+
+fn main() {
+    // test_x_1 is the owner of the string.
+    let test_x_1 = String::from("Hello");
+
+    // Assignment have 'move semantics' in Rust. Here, ownership of "Hello" is 
+    // transferred from test_x_1 to test_x_2, and test_x_1 is no longer usable.
+    let test_x_2 = test_x_1;
+
+    // This line would throw an error since ownership was transferred to 
+    // test_x_2.
+    // println!(test_x_1);
+
+    // We call print_str with an immutable borrow of test_x_2.
+    print_str(&test_x_2);
+}
+```
+
+To make sure that references always point to valid memory, each reference is associated with a _lifetime_. A reference's lifetime is the region of code where it can be used. Rust's borrow checker infers lifetimes for all references in a program and makes sure that every reference's lifetime does not exceed the lifetime of the value's owner (programmers might have to specify some lifetime information manually though, particularly at function calls and when defining structs).
 
 
 ## Interpreter Overview
@@ -257,9 +306,11 @@ def perform_beta_reduction(left_expr, var_name, right_expr):
     match left_expr:
         case FnApp(e_1, e_2):
             perform_beta_reduction(e_1, var_name, right_expr)
-            perform_beta_reduction(e_1, var_name, right_expr)
+            perform_beta_reduction(e_2, var_name, right_expr)
 
         case FnDef(x, fn_body):
+            if x == var_name:
+                return
             if $x \in free_vars(right_expr)$:
                 perform_alpha_conversion(left_expr)
             perform_beta_reduction(fn_body, var_name, right_expr)
@@ -338,7 +389,7 @@ We see that $e$ has become $ee$, and since we start off with $e = a$ where $a$ i
 
 The asymptotic analysis above is not so interesting because it reduces all implementations to having basically the same complexity. It also drops constant factors that may be useful to think about when considering the relative performance of one implementation or another. 
 
-Instead of looking at asymptotic complexity, let's try to characterize the interpreter's efficiency by counting the approximate number of operations performed for ONE reduction. For reducing a redex $e_1 e_2$ where $e_1$ has $n_1$ nodes, $e_2$ has $n_2$ nodes, and the substitution variable occurs $k$ times inside $e_1$, the best case cost with sharing is something like $n_1 + k$ because we have to traverse $e_1$ to find occurrences of the reduction variable, and for each occurrence, we need to rewire a pointer so that it points to $e_2$ now. Without sharing, the best case cost is something like $n_1 + k * n_2$ because we need to copy $e_2$ for each of the $k$ instances of the formal parameter. In my implementation, if we are performing a reduction that does not need alpha conversion, about $n_1 + k * n_2$ operations will be performed, in-line with the best-case non-sharing interpreter. However, if alpha conversion is needed, we will need about $2n_1 + k * n_2$ oeprations, where the extra $n_1$ comes from needing to traverse the tree and rename variables as part of alpha conversion. This gives further insight into how extending the current implementation could speed up performance: using De Bruijn indices will eliminate the additional ~$n$ operations needed to perform alpha conversion, and using sharing will eliminate the $k * n_2$ term.
+Instead of looking at asymptotic complexity, let's try to characterize the interpreter's efficiency by counting the approximate number of operations performed for ONE reduction. For reducing a redex $e_1 e_2$ where $e_1$ has $n_1$ nodes, $e_2$ has $n_2$ nodes, and the substitution variable occurs $k$ times inside $e_1$, the best case cost with sharing is something like $n_1 + k$ because we have to traverse $e_1$ to find occurrences of the reduction variable, and for each occurrence, we need to rewire a pointer so that it points to $e_2$ now. Without sharing, the best case cost is something like $n_1 + k * n_2$ because we need to copy $e_2$ for each of the $k$ instances of the formal parameter. In my implementation, if we are performing a reduction that does not need alpha conversion, about $n_1 + k * n_2$ operations will be performed, in-line with the best-case non-sharing interpreter. However, if alpha conversion is needed, we will need about $2n_1 + k * n_2$ operations, where the extra $n_1$ comes from needing to traverse the tree and rename variables as part of alpha conversion. This gives further insight into how extending the current implementation could speed up performance: using De Bruijn indices will eliminate the additional ~$n$ operations needed to perform alpha conversion, and using sharing will eliminate the $k * n_2$ term.
 
 
 ## Final Thoughts and Future Work
