Header on blog posts, place posts in cards on home page

--- a/posts/rust_lambda_calc_1.mdx
+++ b/posts/rust_lambda_calc_1.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'A Lambda Calculus Interpreter in Rust'
-date: '2025-06-28'
-description: "Notes of functional programming and Rust's ownership system"
+date: '2025-07-08'
+description: "Notes of functional programming and Rust's ownership system."
 ---
 
 <figure>
